[gd_scene load_steps=4 format=3 uid="uid://buxtyevpn2qvp"]

[ext_resource type="Script" path="res://modules/inventory/extras/interface/inventory_view.gd" id="1_es17p"]
[ext_resource type="Script" path="res://modules/inventory/extras/interface/inventory_item_list_view.gd" id="1_upq73"]
[ext_resource type="PackedScene" uid="uid://cicj28fkq4v2q" path="res://modules/inventory/extras/interface/inventory_item_view.tscn" id="3_vv2lk"]

[node name="InventoryView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_es17p")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 132.265)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
bbcode_enabled = true
text = "[b]Inventory[/b]"
fit_content = true

[node name="ItemListView" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
script = ExtResource("1_upq73")
item_view = ExtResource("3_vv2lk")

[node name="EmptyLabel" type="RichTextLabel" parent="VBoxContainer/ItemListView"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
bbcode_enabled = true
text = "[Empty]"
fit_content = true

[node name="InventoryItemView" parent="VBoxContainer/ItemListView" instance=ExtResource("3_vv2lk")]
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="visibility_changed" from="VBoxContainer/ItemListView/EmptyLabel" to="VBoxContainer/ItemListView/EmptyLabel" method="_on_visibility_changed"]
